avoid showing invisible text

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -1,8 +1,13 @@
-@import url(//fonts.googleapis.com/earlyaccess/nanumgothic.css);
+@font-face {
+  font-family: "NanumGothic";
+  src: local("NanumGothic"),
+    url("fonts.googleapis.com/earlyaccess/nanumgothic.css");
+  font-display: swap;
+}
 
 body {
   margin: 0;
-  font-family: Nanum Gothic;
+  font-family: NanumGothic;
 }
 
 h1 {
